assets/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    margin: 0px;
    background-color: rgb(254, 237, 207)
}

header {
    padding: 20px;
    text-align: left;
    background: #e07390;
    color: lightyellow;
}

nav {
    display: flex;
    background-color: #e07390;
    justify-content: flex-start;
}

nav a {
    color: black;
    padding: 0px 25px 0px 5px;
    display: flex;
    font-family: 'Avenir Next', 'Trebuchet MS', 'Gill Sans', sans-serif;
    font-size: 20px;
    letter-spacing: 6px;
    font-weight: 300;
}

nav a:hover {
    color: lightyellow;
    cursor: crosshair;
}

nav a:focus {
    color: #f0a4b8
}

main {
    display: flex;
    flex-wrap: wrap;
}

h2 {
    padding: 10px 20px;
}

p {
    padding: 0px 20px;
    font-size: 14px;
    text-align: left;
}

footer {
    display: flex;
    flex-wrap: wrap;
    padding: 20px;
    background: #e07390;
}

.header {
    display: flex;
    font-family: 'Avenir Next', 'Trebuchet MS', 'Gill Sans', sans-serif;
    font-size: 48px;
    letter-spacing: -5px;
    font-weight: 100;
    text-shadow: black 3px 2px 0px;
}

/* Work project links*/
.work-projects-container {
    display: flex;
}

.project-links {
   width: 100%;
   margin: 10px;
   border: 3px lightgrey;
}

.project-links:hover {
    opacity: 0.5;
    filter: grayscale(100%);
    transition: .4s ease-in-out;
    cursor: crosshair;
    display: flex;
}

.horiseon {
    width: 100%;
}

.wikipedia {
    width: 50%;
}

.stellarium {
    width: 50%;
}

.world-meter {
    width: 50%;
}

.useless-web {
    width: 50%;
}


/*Styling for "Contact Me" text in footer*/
.contact-me {
    display: flex;
    flex-wrap: wrap;
    color: lightyellow;
    padding: 0px 25px 0px 5px;
    display: flex;
    font-family: 'Avenir Next', 'Trebuchet MS', 'Gill Sans', sans-serif;
    font-size: 20px;
    letter-spacing: 6px;
    font-weight: 250;
    text-shadow: grey 3px 2px 0px;
}

#profile-pic {
    padding: 20px;
    width: 50%;
}

@media screen and (max-width: 1000px) {

    main,
    nav,
    footer,
    .header,
    .contact-me,
    #profile-pic {
        flex-direction: column;
        align-items: center;
        text-align: center;
        justify-items: center;
    }

    .work-projects {
        justify-content: center;
        align-items: center;
    }

    header,
    nav,
    footer {
        background: #8ca4f3;
    }

    nav a:focus {
        color: #b6c3eb
    }

}

